Fix language select visibility

--- a/src/Bundle/LichessBundle/Resources/public/css/lichess.css
+++ b/src/Bundle/LichessBundle/Resources/public/css/lichess.css
@@ -601,6 +601,7 @@ ul.lichess_language_links {
     top: 1em;
     left: 0;
     width: 180px;
+    z-index: 5;
 }
 ul.lichess_language_links a {
     display: block;
